# flight_delays_prediction

./: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: .versions
.github/workflows/: linting.yml
config/: mlflow_config.yaml
notebooks/: EDA.ipynb  model_exploration.ipynb
src/: constants.py  evaluation.py  features.py  model_visualizations.py  models.py  predict.py  processing.py  train.py
