[tool.poetry]
name = "credit_application_project"
version = "0.1.0"
description = "Credit application predictive analysis for ABN AMRO DSI case study"
authors = ["Vaibhav Vaidya <vaibhavvinayak08@gmail.com>"]
readme = "README.md"

# include main python scripts
packages = [
    { include = "src" },
]

# include dataset folder
include = ["dataset/*"]

[tool.poetry.dependencies]
python = "^3.11.8"
pre-commit = "^3.4.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
lightgbm = "^4.3.0"
shap = "^0.45.1"
matplotlib = "^3.9.0"
mlflow = "^2.6.0"
plotly = "^5.15.0"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
kaleido = "0.2.1"
black = "22.12.0"
isort = "^5.12.0"
flake8 = "==6.0.0"
imbalanced-learn = "^0.13.0"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = []

[tool.black]
line-length = 120
preview = true
target-version = ['py311']

[tool.autoflake]
in-place = true
remove-unused-variables = true
remove-all-unused-imports = true

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
